--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -7,6 +7,10 @@
     "eslint:recommended",
     "plugin:node/recommended"
   ],
+  "ignorePatterns": [
+    "dist/**",
+    "bin/**"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": 12,
@@ -14,5 +18,13 @@
   },
   "plugins": [
     "node"
-  ]
+  ],
+  "rules": {
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ]
+  }
 }
