update some packages

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "debug": "SERVER_LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 app.js",
@@ -38,11 +38,10 @@
     "@tevko/sensemaking-tools": "^1.0.15",
     "akismet": "~0.0.11",
     "async": "~0.1.22",
-    "aws-sdk": "~2.230.1",
+    "aws-sdk": "^2.1691.0",
     "badwords": "~1.0.0",
     "bcryptjs": "~2.4.3",
-    "bluebird": "~3.5.0",
-    "body-parser": "^1.20.3",
+    "bluebird": "^3.7.2",
     "boolean": "~0.1.3",
     "colors": "^1.4.0",
     "compression": "^1.7.5",
@@ -51,45 +50,46 @@
     "csv-parse": "^5.6.0",
     "csv-to-xml": "^2.0.0",
     "diff": "^7.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "~3.21.2",
     "fb": "~1.0.2",
     "googleapis": "^142.0.0",
-    "html-entities": "^2.4.0",
+    "html-entities": "^2.5.2",
     "http-proxy": "~1.18.1",
     "js2xmlparser": "^5.0.0",
     "lru-cache": "~3.0.0",
-    "mimelib": "~0.2.19",
+    "mimelib": "^0.3.1",
     "morgan": "^1.10.0",
-    "nan": "~2.17.0",
-    "nodemailer": "~6.4.16",
-    "nodemailer-mailgun-transport": "~2.0.0",
-    "oauth": "~0.9.14",
+    "nan": "^2.22.0",
+    "nodemailer-mailgun-transport": "^2.1.5",
+    "nodemailer": "^6.9.16",
+    "oauth": "^0.10.0",
     "openai": "^4.83.0",
-    "optimist": "~0.3.7",
+    "optimist": "^0.6.1",
     "p3p": "~0.0.2",
-    "pg": "~8.8.0",
-    "pg-connection-string": "~2.5.0",
+    "pg-connection-string": "^2.7.0",
+    "pg-native": "^3.2.0",
     "pg-query-stream": "^4.6.0",
-    "replacestream": "~4.0.0",
-    "request": "~2.88.2",
+    "pg": "^8.13.1",
+    "replacestream": "^4.0.3",
     "request-promise": "~4.2.6",
-    "response-time": "~2.3.1",
+    "request": "~2.88.2",
+    "response-time": "^2.3.3",
     "simple-oauth2": "~0.2.1",
     "simple-xml-to-json": "^1.2.3",
     "source-map-support": "~0.5.21",
-    "sql": "~0.34.0",
+    "sql": "^0.78.0",
     "ts-node": "^10.9.2",
-    "underscore": "~1.12.1",
+    "underscore": "^1.13.7",
     "valid-url": "~1.0.9",
-    "winston": "~3.8.2",
+    "winston": "^3.15.0",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-plugin-node": "^11.1.0",
-    "nodemon": "^3.1.0",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
   }
 }
