add biome to npm scripts

--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,11 @@
     "start:watch": "nodemon app.js",
     "fix-imports": "node bin/add-extensions.js",
     "clean": "rm -rf dist",
-    "build": "npm run fix-imports && npm run clean && tsc"
+    "build": "npm run fix-imports && npm run clean && tsc",
+    "lint": "biome lint",
+    "format": "biome format",
+    "check": "biome check",
+    "fix": "biome check --fix"
   },
   "repository": {
     "type": "git",
