--- a/server/biome.json
+++ b/server/biome.json
@@ -19,6 +19,9 @@
   "linter": {
     "enabled": true,
     "rules": {
+      "complexity": {
+        "noForEach": "off"
+      },
       "correctness": {
         "noUndeclaredDependencies": "error",
         "noUndeclaredVariables": "error",
@@ -27,6 +30,7 @@
       },
       "recommended": true,
       "style": {
+        "noParameterAssign": "off",
         "useNodejsImportProtocol": "off"
       },
       "suspicious": {
