--- a/client-report/package.json
+++ b/client-report/package.json
@@ -40,9 +40,8 @@
     "jquery": "~3.6.3",
     "lodash": "~4.17.21",
     "prop-types": "~15.8.1",
-    "radium": "~0.26.2",
-    "react": "~17.0.2",
-    "react-dom": "~17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "~18.3.1",
     "react-fontawesome": "~0.3.3",
     "react-redux": "~7.2.9",
     "redux": "~3.0.5",
