--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,9 @@
   "author": "",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@google-cloud/translate": "~1.0.0",
+    "@google/generative-ai": "^0.21.0",
     "akismet": "~0.0.11",
     "async": "~0.1.22",
     "aws-sdk": "~2.230.1",
