--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,7 +7,7 @@
 # For a dev build, use `--target dev`.
 # Should default to prod build, but you can also explicitly use `--target prod`
 
-FROM docker.io/node:20-alpine as base
+FROM docker.io/node:22-alpine as base
 
 ARG NODE_ENV
 
@@ -57,6 +57,4 @@ RUN apk del .build
 
 COPY . .
 
-RUN npm run build
-
-CMD npm run serve
+CMD npm start
