--- a/client-report/package.json
+++ b/client-report/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-decorators": "~7.21.0",
     "@babel/preset-env": "~7.20.2",
     "@babel/preset-react": "~7.18.6",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "babel-jest": "^29.7.0",
     "babel-loader": "~9.1.2",
