--- a/client-report/package.json
+++ b/client-report/package.json
@@ -13,7 +13,7 @@
   "author": "Colin Megill",
   "license": "",
   "devDependencies": {
-    "@babel/core": "~7.21.0",
+    "@babel/core": "^7.22.0",
     "@babel/eslint-parser": "~7.19.1",
     "@babel/plugin-proposal-decorators": "~7.21.0",
     "@babel/preset-env": "~7.20.2",
