--- a/server/package.json
+++ b/server/package.json
@@ -97,6 +97,6 @@
     "prettier": "~2.2.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "typescript": "~4.3.5"
+    "typescript": "^5.7.2"
   }
 }
