make script run dynamically with report ID arg

--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "googleapis": "^142.0.0",
     "html-entities": "^2.4.0",
     "http-proxy": "~1.18.1",
+    "js2xmlparser": "^5.0.0",
     "lru-cache": "~3.0.0",
     "mimelib": "~0.2.19",
     "morgan": "^1.10.0",
@@ -59,6 +60,7 @@
     "request-promise": "~4.2.6",
     "response-time": "~2.3.1",
     "simple-oauth2": "~0.2.1",
+    "simple-xml-to-json": "^1.2.3",
     "source-map-support": "~0.5.21",
     "sql": "~0.34.0",
     "underscore": "~1.12.1",
