--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,8 @@
     "bluebird": "~3.5.0",
     "boolean": "~0.1.3",
     "connect-timeout": "~1.9.0",
+    "csv-parse": "^5.6.0",
+    "csv-to-xml": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "~3.21.2",
     "fb": "~1.0.2",
@@ -65,7 +67,8 @@
     "sql": "~0.34.0",
     "underscore": "~1.12.1",
     "valid-url": "~1.0.9",
-    "winston": "~3.8.2"
+    "winston": "~3.8.2",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@types/async": "~3.2.6",
