create and use a DEV_API_EXTERNAL_PORT for avoiding port 5000 collisions on MacOS

--- a/example.env
+++ b/example.env
@@ -91,6 +91,10 @@ DOMAIN_WHITELIST_ITEM_07=
 DOMAIN_WHITELIST_ITEM_08=
 # In production, should match API_PROD_HOSTNAME or DOMAIN_OVERRIDE, if set:
 EMBED_SERVICE_HOSTNAME=localhost
+# When using Docker for development, the server container internally listens on API_SERVER_PORT (default 5000).
+# To avoid conflicts on your host system, use DEV_API_EXTERNAL_PORT to map the internal port to a different external port.
+# This should match the port of API_DEV_HOSTNAME if customized.
+DEV_API_EXTERNAL_PORT=
 # Full hostname with protocol of your API server:
 # (Optional. Currently only used in client-report development.)
 SERVICE_URL=
