--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,7 +19,7 @@ services:
       - ./server:/app
       - /app/node_modules
     ports:
-      - "${API_SERVER_PORT:-5000}:${API_SERVER_PORT:-5000}"
+      - "${DEV_API_EXTERNAL_PORT:-5000}:${API_SERVER_PORT:-5000}"
       - "9229:9229"
 
   math:
