simplify hostname configurations

--- a/example.env
+++ b/example.env
@@ -76,30 +76,21 @@ SHOULD_USE_TRANSLATION_API=
 
 
 ###### CUSTOM URL/HOSTNAME SETTINGS ######
-# If you are running a development server anywhere other than localhost:80 or localhost:5000,
-# you need to update API_DEV_HOSTNAME and EMBED_SERVICE_HOSTNAME.
-API_DEV_HOSTNAME=localhost
-# If you are running polis on a custom domain, set both API_PROD_HOSTNAME and DOMAIN_OVERRIDE
-# to the same value. In the future these will be combined into one setting.
+# Development:
+# API_DEV_HOSTNAME: The full hostname:port for the API server in development.
+#                  Defaults to localhost:5000.  If you change DEV_API_EXTERNAL_PORT,
+#                  you *must* also change this to match (e.g., localhost:5001).
+API_DEV_HOSTNAME=localhost:5000
+# Production:
+# API_PROD_HOSTNAME: The public-facing hostname for your Polis instance.
+#                   Defaults to pol.is.  For custom domains, set this to your domain
+#                   (e.g., mypolis.org).  Do *not* include the protocol (https://).
 API_PROD_HOSTNAME=pol.is
-DOMAIN_OVERRIDE=
-DOMAIN_WHITELIST_ITEM_01=
-DOMAIN_WHITELIST_ITEM_02=
-DOMAIN_WHITELIST_ITEM_03=
-DOMAIN_WHITELIST_ITEM_04=
-DOMAIN_WHITELIST_ITEM_05=
-DOMAIN_WHITELIST_ITEM_06=
-DOMAIN_WHITELIST_ITEM_07=
-DOMAIN_WHITELIST_ITEM_08=
-# In production, should match API_PROD_HOSTNAME or DOMAIN_OVERRIDE, if set:
-EMBED_SERVICE_HOSTNAME=localhost
-# When using Docker for development, the server container internally listens on API_SERVER_PORT (default 5000).
-# To avoid conflicts on your host system, use DEV_API_EXTERNAL_PORT to map the internal port to a different external port.
-# This should match the port of API_DEV_HOSTNAME if customized.
-DEV_API_EXTERNAL_PORT=
-# Full hostname with protocol of your API server:
-# (Optional. Currently only used in client-report development.)
-SERVICE_URL=
+# In production, should match API_PROD_HOSTNAME, if set:
+EMBED_SERVICE_HOSTNAME=
+# EMBED_API_EXTERNAL_PORT: The port exposed on the *host* machine for the API server.
+#                       Defaults to 5000. Change this if port 5000 is in use.
+DEV_API_EXTERNAL_PORT=5000
 STATIC_FILES_HOST=file-server
 
 
@@ -155,6 +146,3 @@ WEBSERVER_USERNAME=ws-user
 # * FB_APP_ID
 # * GA_TRACKING_ID
 # * ENABLE_TWITTER_WIDGETS
-# * SERVICE_URL (if static assests are served from a separate domain than API, as described above)
-
-
