--- a/server/example.env
+++ b/server/example.env
@@ -8,11 +8,10 @@ API_DEV_HOSTNAME=localhost:5000
 API_SERVER_PORT=5000
 DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@localhost:5432/polis-dev
 DEV_MODE=true
-DOMAIN_OVERRIDE=
 EMAIL_TRANSPORT_TYPES=maildev
 MATH_ENV=prod
 POLIS_FROM_ADDRESS="Example <team@example.com>"
-SERVER_LOG_LEVEL=info
+SERVER_LOG_LEVEL=warn
 STATIC_FILES_ADMIN_PORT=8080
 STATIC_FILES_PARTICIPATION_PORT=8080
 STATIC_FILES_HOST=localhost
