test deploy workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,15 +31,13 @@ services:
       - DATABASE_SSL=true
     env_file:
       - ${SERVER_ENV_FILE:-.env}
-    image: 050917022930.dkr.ecr.us-east-1.amazonaws.com/polis:${TAG:-server-latest}
+    image: 050917022930.dkr.ecr.us-east-1.amazonaws.com/polis/server
     build:
       context: ./server
       dockerfile: Dockerfile
       target: prod
       args:
         NODE_ENV: production
-      labels:
-        polis_tag: ${TAG:-server-latest}
     depends_on:
       - "file-server"
     networks:
@@ -51,11 +49,9 @@ services:
       - server-logs:/app/logs
 
   math:
-    image: 050917022930.dkr.ecr.us-east-1.amazonaws.com/polis:${TAG:-math-latest}
+    image: 050917022930.dkr.ecr.us-east-1.amazonaws.com/polis/math
     build:
       context: ./math
-      labels:
-        polis_tag: ${TAG:-math-latest}
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - LOGGING_LEVEL=${MATH_LOG_LEVEL:-warn}
