--- a/.github/workflows/deploy-alpha-aws.yml
+++ b/.github/workflows/deploy-alpha-aws.yml
@@ -25,6 +25,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin # Install docker-compose plugin for docker CLI
+          docker compose version # Verify installation
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
