--- a/.github/workflows/deploy-alpha-aws.yml
+++ b/.github/workflows/deploy-alpha-aws.yml
@@ -31,6 +31,11 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version # Verify installation
         
+      - name: Copy .env file
+        run: |
+          echo "Copying example.env to .env"
+          cp example.env .env
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
