--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -47,6 +47,9 @@ FROM base as prod
 # Set default NODE_ENV to production unless overridden at build time with --build-arg NODE_ENV=development
 ENV NODE_ENV ${NODE_ENV:-production}
 
+# Install OpenSSL and CA Certificates (CRITICAL for production)
+RUN apk add --no-cache openssl ca-certificates
+
 RUN npm ci --production=false
 
 # For prod builds, to minimize the image size, remove the dependencies tagged with `--virtual .build` above.
