--- a/example.env
+++ b/example.env
@@ -131,6 +131,8 @@ GEMINI_API_KEY=
 OPEN_ROUTER_API_KEY=
 OPENAI_API_KEY=
 
+# spit out generative responses and associated files to file system 
+DEBUG_NARRATIVE_COVERAGE_WRITE_TO_DISK=
 
 # A value in miliseconds for caching AI responses for narrativeReport
 MAX_REPORT_CACHE_DURATION=
