Development Data Seeds via Cypress (#1938)
* Helpful `npm run seed` script in e2e

* improved seed logic

* improved seed performance

* include xids in seed votes

* increment seed xid

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -15,7 +15,8 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write .",
     "build:embed": "node build-embed.js",
-    "build:integrated": "node build-integrated.js"
+    "build:integrated": "node build-integrated.js",
+    "seed": "node scripts/seed.js"
   },
   "author": "",
   "license": "ISC",
