default server logging to 'warn' (#1939)

--- a/example.env
+++ b/example.env
@@ -15,7 +15,7 @@ MATH_ENV=prod
 MATH_LOG_LEVEL=
 # Optionally give the server container a distinct env_file. Useful for CI tests.
 SERVER_ENV_FILE=.env
-# Used by winston via server/utils/logger. Defaults to "info".
+# Used by winston via server/utils/logger. Defaults to "warn".
 SERVER_LOG_LEVEL=
 
 
