--- a/server/package.json
+++ b/server/package.json
@@ -29,70 +29,72 @@
   "license": "AGPL-3.0",
   "engine": ">=20.12.2",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.32.1",
+    "@anthropic-ai/sdk": "^0.39.0",
     "@anthropic-ai/tokenizer": "^0.0.4",
-    "@aws-sdk/client-dynamodb": "^3.731.1",
-    "@aws-sdk/lib-dynamodb": "^3.731.1",
-    "@babel/preset-env": "^7.25.4",
-    "@google-cloud/aiplatform": "^3.34.0",
-    "@google-cloud/translate": "^8.5.1",
-    "@google-cloud/vertexai": "^1.9.0",
-    "@google/generative-ai": "^0.21.0",
-    "@sinclair/typebox": "^0.34.3",
+    "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@babel/preset-env": "^7.26.9",
+    "@google-cloud/aiplatform": "^3.35.0",
+    "@google-cloud/translate": "~1.1.0",
+    "@google-cloud/vertexai": "^1.9.3",
+    "@google/generative-ai": "^0.24.0",
+    "@sinclair/typebox": "^0.34.28",
     "@tevko/sensemaking-tools": "^1.0.15",
     "akismet": "~0.0.13",
-    "async": "~0.1.22",
+    "async": "~0.9.2",
     "aws-sdk": "^2.1692.0",
     "badwords": "~1.0.0",
     "bcryptjs": "~2.4.3",
     "bluebird": "^3.7.2",
-    "boolean": "~0.1.3",
+    "body-parser": "^1.20.3",
+    "boolean": "~0.2.0",
     "colors": "^1.4.0",
-    "compression": "^1.7.5",
+    "compression": "^1.8.0",
     "connect-timeout": "~1.9.0",
     "cookie-parser": "^1.4.7",
     "csv-parse": "^5.6.0",
     "csv-to-xml": "^2.0.0",
     "diff": "^7.0.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "~3.21.2",
-    "fb": "~1.0.2",
-    "glob": "^11.0.0",
+    "fb": "~1.1.1",
+    "glob": "^11.0.1",
     "googleapis": "^144.0.0",
     "html-entities": "^2.5.2",
     "http-proxy": "~1.18.1",
     "js2xmlparser": "^5.0.0",
-    "lru-cache": "~3.0.0",
+    "lru-cache": "~3.2.0",
     "mimelib": "^0.3.1",
     "morgan": "^1.10.0",
-    "nan": "^2.22.0",
-    "nodemailer": "^6.9.16",
+    "nan": "^2.22.2",
     "nodemailer-mailgun-transport": "^2.1.5",
+    "nodemailer": "^6.10.0",
     "oauth": "^0.10.0",
-    "openai": "^4.83.0",
+    "openai": "^4.86.2",
     "optimist": "^0.6.1",
     "p3p": "~0.0.2",
-    "pg": "^8.13.1",
     "pg-connection-string": "^2.7.0",
     "pg-native": "^3.2.0",
-    "pg-query-stream": "^4.7.1",
+    "pg-query-stream": "^4.7.3",
+    "pg": "^8.13.3",
     "replacestream": "^4.0.3",
     "request-promise": "~4.2.6",
+    "request": "~2.88.2",
     "response-time": "^2.3.3",
-    "simple-oauth2": "~0.2.1",
+    "simple-oauth2": "~0.8.0",
     "simple-xml-to-json": "^1.2.3",
     "source-map-support": "~0.5.21",
     "sql": "^0.78.0",
     "ts-node": "^10.9.2",
     "underscore": "^1.13.7",
     "valid-url": "~1.0.9",
-    "xmlbuilder2": "^3.1.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.10.0",
-    "nodemon": "^3.1.7",
-    "typescript": "^5.7.2"
+    "@types/node": "^22.13.9",
+    "nodemon": "^3.1.9",
+    "typescript": "^5.8.2"
   }
 }
