--- a/server/biome.json
+++ b/server/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "files": {
-    "ignore": [],
+    "ignore": ["dist/", "app.ts"],
     "ignoreUnknown": false
   },
   "formatter": {
