--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "build": "npm run fix-imports && npm run clean && tsc --pretty",
     "lint": "biome lint --write",
     "lint:unsafe": "biome lint --write --unsafe",
+    "lint:list": "biome lint 2>&1 | grep 'Users' | sed 's/:.*//' | sed 's|.*/server/||' | sort | uniq",
     "format": "biome format --write",
     "check": "biome check --max-diagnostics=none"
   },
