local server docker dev concerns

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,7 +7,7 @@
 # For a dev build, use `--target dev`.
 # Should default to prod build, but you can also explicitly use `--target prod`
 
-FROM docker.io/node:22-alpine as base
+FROM docker.io/node:22-alpine AS base
 
 ARG NODE_ENV
 
@@ -29,24 +29,24 @@ EXPOSE 5000
 
 # Define the development build
 
-FROM base as dev
+FROM base AS dev
 
 # Set default NODE_ENV to development unless overridden at build time with --build-arg NODE_ENV=production
-ENV NODE_ENV ${NODE_ENV:-development}
+ENV NODE_ENV=${NODE_ENV:-development}
 
 RUN npm ci --production=false
 
 COPY . .
 
-CMD npm run dev
+CMD ["npm", "run", "dev"]
 
 
 # Define the production build
 
-FROM base as prod
+FROM base AS prod
 
 # Set default NODE_ENV to production unless overridden at build time with --build-arg NODE_ENV=development
-ENV NODE_ENV ${NODE_ENV:-production}
+ENV NODE_ENV=${NODE_ENV:-production}
 
 RUN npm ci
 
@@ -55,4 +55,4 @@ RUN apk del .build
 
 COPY . .
 
-CMD npm start
+CMD ["npm", "start"]
