--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "debug": "SERVER_LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 app.js",
-    "dev": "npm run debug",
+    "dev": "nodemon --inspect=0.0.0.0:9229 app.js",
     "serve": "node app.js",
     "start": "npm run serve",
     "start:watch": "nodemon app.js",
