--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,12 +1,18 @@
-version: '3.8'
-
 services:
   polis-server:
     build:
       context: .
-      target: dev  # Use dev target for local development
+      target: dev
+      args:
+        NODE_ENV: development
+    volumes:
+      # This will mount your current directory to /app in the container
+      - .:/app
+      - /app/node_modules
     ports:
-      - "5069:5069"  # Matching API_SERVER_PORT from .env
+      - "${API_SERVER_PORT:-5000}:${API_SERVER_PORT:-5000}"
+      # Node debugger port
+      - "9229:9229"
     depends_on:
       - polis-db
     env_file:
@@ -19,14 +25,27 @@ services:
       context: .
       dockerfile: Dockerfile-db
     environment:
-      POSTGRES_DB: polis-dev
-      POSTGRES_PASSWORD: postgres
+      - POSTGRES_DB=${POSTGRES_DB:?error}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?error}
+      - POSTGRES_USER=${POSTGRES_USER:?error}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - polis-net
+
+  polis-math:
+    depends_on:
+      - polis-db
+    build:
+      context: ../math
+    environment:
+      - DATABASE_URL=${DATABASE_URL:?error}
+      - LOGGING_LEVEL=warn
+      - MATH_ENV=${MATH_ENV:-prod}
+    networks:
+      - "polis-net"
 
 networks:
   polis-net:
