--- a/server/example.env
+++ b/server/example.env
@@ -6,13 +6,17 @@
 
 API_DEV_HOSTNAME=localhost:5000
 API_SERVER_PORT=5000
-DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/polis-dev
+DATABASE_URL=postgres://postgres:postgres@polis-db:5432/polis-dev
 DEV_MODE=true
 DOMAIN_OVERRIDE=
 EMAIL_TRANSPORT_TYPES=maildev
 MATH_ENV=prod
 POLIS_FROM_ADDRESS="Example <team@example.com>"
+POSTGRES_DB=polis-dev
+POSTGRES_PASSWORD=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
 SERVER_LOG_LEVEL=info
 STATIC_FILES_ADMIN_PORT=8080
-STATIC_FILES_PARTICIPATION_PORT=8080
 STATIC_FILES_HOST=localhost
+STATIC_FILES_PARTICIPATION_PORT=8080
