--- a/server/biome.json
+++ b/server/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "files": {
-    "ignore": ["dist/", "app.ts"],
+    "ignore": ["coverage/", "dist/", "**/*.ts"],
     "ignoreUnknown": false
   },
   "formatter": {
@@ -26,7 +26,7 @@
         "noUndeclaredDependencies": "error",
         "noUndeclaredVariables": "error",
         "noUnusedImports": "error",
-        "noUnusedVariables": "error"
+        "noUnusedVariables": "off"
       },
       "recommended": true,
       "style": {
@@ -41,6 +41,7 @@
   "overrides": [
     {
       "include": ["app.js", "src/**"],
+      "ignore": ["bin/**", "__tests__/**"],
       "linter": {
         "rules": {
           "suspicious": {
@@ -52,6 +53,12 @@
             }
           }
         }
+      }
+    },
+    {
+      "include": ["__tests__/**"],
+      "javascript": {
+        "globals": ["describe", "it", "test", "expect", "beforeEach", "afterEach", "beforeAll", "afterAll", "jest"]
       }
     }
   ],
