--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -47,6 +47,16 @@ services:
     networks:
       - "polis-net"
 
+  maildev:
+    image: docker.io/maildev/maildev:1.1.1
+    networks:
+      - polis-net
+    ports:
+      # User interface
+      - "1080:1080"
+      # SMTP port
+      - "1025:1025"
+
 networks:
   polis-net:
     name: polis-net
