--- a/server/example.env
+++ b/server/example.env
@@ -6,7 +6,10 @@
 
 API_DEV_HOSTNAME=localhost:5000
 API_SERVER_PORT=5000
-DATABASE_URL=postgres://postgres:postgres@polis-db:5432/polis-dev
+API_URL=http://localhost:5000
+# DATABASE_URL=postgres://postgres:postgres@polis-db:5432/polis-dev
+# DATABASE_URL=postgres://postgres:postgres@localhost:5432/polis-dev
+DATABASE_URL=postgres://postgres:postgres@host.docker.internal:5432/polis-dev
 DEV_MODE=true
 DOMAIN_OVERRIDE=
 EMAIL_TRANSPORT_TYPES=maildev
