--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "format": "biome format --write",
     "check": "biome check --max-diagnostics=none",
     "check:fix": "biome check --write --unsafe",
+    "db:reset": "node bin/db-reset.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --forceExit",
     "test:unit": "npm test -- --testPathIgnorePatterns=integration",
     "test:integration": "npm test -- --testPathPattern=integration"
