--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -20,6 +20,17 @@ services:
     networks:
       - polis-net
 
+  legacy-server:
+    image: polis-server:legacy
+    ports:
+      - "5002:5000"
+    depends_on:
+      - polis-db
+    env_file:
+      - legacy.env
+    networks:
+      - polis-net
+
   polis-db:
     build:
       context: .
