--- a/server/legacy.env
+++ b/server/legacy.env
@@ -1,8 +1,7 @@
 API_DEV_HOSTNAME=localhost:5002
 API_SERVER_PORT=5002
-API_URL=http://localhost:5002
 DATABASE_URL=postgres://postgres:postgres@host.docker.internal:5432/polis-dev
-DEV_MODE=false
+DEV_MODE=true
 DOMAIN_OVERRIDE=
 EMAIL_TRANSPORT_TYPES=maildev
 MATH_ENV=prod
@@ -11,7 +10,7 @@ POSTGRES_DB=polis-dev
 POSTGRES_PASSWORD=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-SERVER_LOG_LEVEL=warn
+SERVER_LOG_LEVEL=info
 STATIC_FILES_ADMIN_PORT=8080
 STATIC_FILES_HOST=localhost
 STATIC_FILES_PARTICIPATION_PORT=8080
