--- a/server/legacy.env
+++ b/server/legacy.env
@@ -1,6 +1,6 @@
 API_DEV_HOSTNAME=localhost:5002
 API_SERVER_PORT=5002
-DATABASE_URL=postgres://postgres:postgres@host.docker.internal:5432/polis-dev
+DATABASE_URL=postgres://postgres:postgres@polis-db:5432/polis-dev
 DEV_MODE=true
 DOMAIN_OVERRIDE=
 EMAIL_TRANSPORT_TYPES=maildev
@@ -14,3 +14,7 @@ SERVER_LOG_LEVEL=info
 STATIC_FILES_ADMIN_PORT=8080
 STATIC_FILES_HOST=localhost
 STATIC_FILES_PARTICIPATION_PORT=8080
+# Claude put these here; I have no idea if they have any effect:
+SESSION_COOKIE_SECURE=false
+SESSION_COOKIE_SAME_SITE=lax
+SESSION_SECRET=localtestingsecret
