--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       context: ../math
     environment:
       - DATABASE_URL=${DATABASE_URL:?error}
-      - LOGGING_LEVEL=warn
+      - LOGGING_LEVEL=debug
       - MATH_ENV=${MATH_ENV:-prod}
     networks:
       - "polis-net"
