--- a/server/Dockerfile-db
+++ b/server/Dockerfile-db
@@ -4,7 +4,7 @@
 # docker run --rm --name polis-db --network polis-net -p 5432:5432 \
 # -e POSTGRES_DB=polis-dev -e POSTGRES_PASSWORD=postgres polis-db:local
 
-FROM docker.io/postgres:16-alpine
+FROM docker.io/postgis/postgis:16-3.4
 
 # Used when no existing database on postgres volume, including first initialization.
 # See: docs/deployment.md#database-migrations
