--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -4,76 +4,62 @@
   "repository": "github:pol-is/polisClientAdmin",
   "description": "Polis Admin Console",
   "scripts": {
-    "build:dev": "webpack --mode=development",
+    "build:dev": "webpack",
     "build:prod": "webpack --mode=production",
-    "analyze": "webpack --mode=production --analyze",
-    "dev": "webpack-dev-server --mode=development",
+    "dev": "webpack-dev-server",
     "build": "npm run build:prod",
     "start": "npm run dev",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "test": "jest"
+    "lint": "eslint --quiet .",
+    "lint:fix": "eslint . --fix",
+    "lint:verbose": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier --write ."
   },
   "author": "Colin Megill",
   "devDependencies": {
-    "@babel/core": "~7.16.0",
-    "@babel/plugin-proposal-class-properties": "~7.13.0",
-    "@babel/plugin-proposal-decorators": "~7.13.5",
-    "@babel/plugin-transform-runtime": "~7.13.7",
-    "@babel/preset-env": "~7.16.11",
-    "@babel/preset-react": "~7.16.7",
-    "@mdx-js/loader": "~1.6.22",
-    "babel-eslint": "~10.1.0",
-    "babel-loader": "~8.2.5",
+    "@babel/core": "~7.26.10",
+    "@babel/eslint-parser": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "~7.18.6",
+    "@babel/plugin-proposal-decorators": "~7.25.9",
+    "@babel/plugin-transform-runtime": "~7.26.10",
+    "@babel/preset-env": "~7.26.9",
+    "@babel/preset-react": "~7.26.3",
+    "@mdx-js/loader": "^3.1.0",
+    "babel-loader": "~10.0.0",
     "babel-plugin-lodash": "~3.3.4",
-    "bluebird": "~3.7.2",
-    "compression-webpack-plugin": "~7.1.2",
-    "copy-webpack-plugin": "~9.0.1",
-    "eslint": "~7.20.0",
-    "eslint-config-prettier": "~8.1.0",
-    "eslint-config-standard": "~16.0.2",
-    "eslint-plugin-babel": "~5.3.1",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-prettier": "~3.1.4",
-    "eslint-plugin-promise": "~4.3.1",
-    "eslint-plugin-react": "~7.22.0",
-    "eslint-plugin-standard": "~4.0.2",
-    "event-hooks-webpack-plugin": "~2.2.0",
-    "glob": "~7.1.6",
-    "html-webpack-plugin": "~5.5.0",
-    "lodash-webpack-plugin": "~0.11.6",
-    "mri": "~1.2.0",
-    "prettier": "~2.2.1",
-    "prettier-config-standard": "~4.0.0",
-    "serve": "~11.3.2",
-    "webpack-bundle-analyzer": "~4.4.0",
-    "webpack-dev-server": "~4.6.0",
-    "webpack": "~5.75.0",
-    "webpack-cli": "~5.0.1"
+    "compression-webpack-plugin": "^11.1.0",
+    "copy-webpack-plugin": "^13.0.0",
+    "eslint": "~9.22.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
+    "event-hooks-webpack-plugin": "^3.0.0",
+    "glob": "^11.0.1",
+    "globals": "^16.0.0",
+    "html-loader": "~5.1.0",
+    "html-webpack-plugin": "~5.6.3",
+    "html-webpack-tags-plugin": "~3.0.2",
+    "lodash-webpack-plugin": "^0.11.6",
+    "prettier": "^3.5.3",
+    "prettier-config-standard": "^7.0.0",
+    "terser-webpack-plugin": "^5.3.14",
+    "webpack": "~5.98.0",
+    "webpack-cli": "~6.0.1",
+    "webpack-dev-server": "~5.2.0"
   },
   "dependencies": {
-    "d3-scale": "~3.2.3",
-    "jquery": "~2.1.4",
+    "d3-scale": "~3.3.0",
+    "jquery": "~2.2.4",
     "lodash": "~4.17.21",
-    "prop-types": "~15.7.2",
+    "prop-types": "~15.8.1",
     "react": "~16.14.0",
     "react-dom": "~16.14.0",
     "react-easy-emoji": "~1.8.1",
-    "react-redux": "7.2.2",
-    "react-router-dom": "~5.2.0",
-    "redux": "~4.0.5",
-    "redux-thunk": "~2.3.0",
-    "theme-ui": "~0.3.5",
-    "victory": "~35.4.11"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": "src/**/*.js",
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary"
-    ]
+    "react-redux": "7.2.9",
+    "react-router-dom": "~5.3.4",
+    "redux": "~4.2.1",
+    "redux-thunk": "~2.4.2",
+    "theme-ui": "0.13.1",
+    "victory": "~35.11.4"
   }
 }
