--- a/example.env
+++ b/example.env
@@ -1,7 +1,6 @@
 # Copy this file to .env and fill in the values, # or set the values in your environment as needed.
 # docker compose (if used) will read from .env. This file is also used by the server app.
 
-
 ###### GENERAL SETTINGS ######
 ADMIN_UIDS=[]
 # Options: maildev, aws-ses, mailgun
@@ -18,7 +17,6 @@ SERVER_ENV_FILE=.env
 # Used by winston via server/utils/logger. Defaults to "warn".
 SERVER_LOG_LEVEL=
 
-
 ###### DATABASE ######
 # Optional DB replica for reads:
 READ_ONLY_DATABASE_URL=
@@ -33,12 +31,10 @@ DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/$
 # Makefile will read this to determine if the database is running in a docker container.
 POSTGRES_DOCKER=true
 
-
 ###### DOCKER CONCERNS ######
 # Optionally set this to whatever you want. It is a convenience for docker assets.
 TAG=dev
 COMPOSE_PROJECT_NAME=polis-${TAG}
-
 
 ###### PORTS ######
 API_SERVER_PORT=5000
@@ -50,14 +46,12 @@ STATIC_FILES_PORT=8080
 STATIC_FILES_ADMIN_PORT=${STATIC_FILES_PORT}
 STATIC_FILES_PARTICIPATION_PORT=${STATIC_FILES_PORT}
 
-
 ###### EMAIL ADDRESSES ######
 ADMIN_EMAIL_DATA_EXPORT_TEST=
 ADMIN_EMAIL_DATA_EXPORT=
 ADMIN_EMAIL_EMAIL_TEST=
 ADMIN_EMAILS=[]
 POLIS_FROM_ADDRESS="Example <team@example.com>"
-
 
 ###### BOOLEAN FLAGS ######
 # Instructs the API server to cache the results from the math service. Default is true if not set.
@@ -74,30 +68,20 @@ RUN_PERIODIC_EXPORT_TESTS=
 SERVER_LOG_TO_FILE=
 SHOULD_USE_TRANSLATION_API=
 
-
 ###### CUSTOM URL/HOSTNAME SETTINGS ######
-# If you are running a development server anywhere other than localhost:80 or localhost:5000,
-# you need to update API_DEV_HOSTNAME and EMBED_SERVICE_HOSTNAME.
-API_DEV_HOSTNAME=localhost
-# If you are running polis on a custom domain, set both API_PROD_HOSTNAME and DOMAIN_OVERRIDE
-# to the same value. In the future these will be combined into one setting.
+# Development:
+# API_DEV_HOSTNAME: The full hostname:port for the API server in development.
+#                  Defaults to localhost:5000.  If you change API_SERVER_PORT,
+#                  you *must* also change this to match (e.g., localhost:5001).
+API_DEV_HOSTNAME=localhost:5000
+# Production:
+# API_PROD_HOSTNAME: The public-facing hostname for your Polis instance.
+#                   Defaults to pol.is.  For custom domains, set this to your domain
+#                   (e.g., mypolis.org).  Do *not* include the protocol (https://).
 API_PROD_HOSTNAME=pol.is
-DOMAIN_OVERRIDE=
-DOMAIN_WHITELIST_ITEM_01=
-DOMAIN_WHITELIST_ITEM_02=
-DOMAIN_WHITELIST_ITEM_03=
-DOMAIN_WHITELIST_ITEM_04=
-DOMAIN_WHITELIST_ITEM_05=
-DOMAIN_WHITELIST_ITEM_06=
-DOMAIN_WHITELIST_ITEM_07=
-DOMAIN_WHITELIST_ITEM_08=
-# In production, should match API_PROD_HOSTNAME or DOMAIN_OVERRIDE, if set:
-EMBED_SERVICE_HOSTNAME=localhost
-# Full hostname with protocol of your API server:
-# (Optional. Currently only used in client-report development.)
-SERVICE_URL=
+# In production, should match API_PROD_HOSTNAME, if set:
+EMBED_SERVICE_HOSTNAME=
 STATIC_FILES_HOST=file-server
-
 
 ###### THIRD PARTY API CREDENTIALS ######
 # These are all optional, but some features will not work without them.
@@ -124,7 +108,6 @@ OPENAI_API_KEY=
 # A value in miliseconds for caching AI responses for narrativeReport
 MAX_REPORT_CACHE_DURATION=
 
-
 ###### DYNAMODB ######
 # When using local DynamoDB, this should be http://dynamodb:8000.
 # In production, set DYNAMODB_ENDPOINT to the cloud endpoint (e.g. https://dynamodb.us-west-2.amazonaws.com),
@@ -138,11 +121,17 @@ ENCRYPTION_PASSWORD_00001=
 WEBSERVER_PASS=ws-pass
 WEBSERVER_USERNAME=ws-user
 
-
 ###### CLIENT SIDE CONFIG ######
 # If building client assets, only the following variables are needed:
 # * EMBED_SERVICE_HOSTNAME
 # * GA_TRACKING_ID
-# * SERVICE_URL (if static assests are served from a separate domain than API, as described above)
 
 
+###### ADDITIONAL DOMAINS ######
+DOMAIN_WHITELIST_ITEM_01=
+DOMAIN_WHITELIST_ITEM_02=
+DOMAIN_WHITELIST_ITEM_03=
+DOMAIN_WHITELIST_ITEM_04=
+DOMAIN_WHITELIST_ITEM_05=
+DOMAIN_WHITELIST_ITEM_06=
+DOMAIN_WHITELIST_ITEM_07=
