--- a/server/test/settings/test.env
+++ b/server/test/settings/test.env
@@ -1,3 +1,10 @@
 # Unique values for test environment
 DEV_MODE=true
+API_DEV_HOSTNAME=localhost:5050
 API_SERVER_PORT=5050 # Must be different than server port to avoid collision.
+# Default docker compose postgres database for development
+DATABASE_URL=postgres://postgres:oiPorg3Nrz0yqDLE@localhost:5432/polis-dev
+EMAIL_TRANSPORT_TYPES=maildev
+MATH_ENV=test
+POLIS_FROM_ADDRESS="Test <test@example.com>"
+SERVER_LOG_LEVEL=warn
