--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,15 @@
 {
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "biome.enabled": true,
+  "editor.codeActionsOnSave": {
+    "quickfix.biome": "explicit",
+    "source.organizeImports.biome": "explicit"
+  },
+  "editor.formatOnSave": true,
+  "eslint.enable": true,
+  "peacock.color": "#92e041",
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#abe76d",
     "activityBar.background": "#abe76d",
@@ -17,6 +28,5 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#92e04199",
     "titleBar.inactiveForeground": "#15202b99"
-  },
-  "peacock.color": "#92e041"
+  }
 }
