--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -4,7 +4,7 @@
   },
   "biome.enabled": true,
   "editor.codeActionsOnSave": {
-    "quickfix.biome": "explicit",
+    "quickfix.biome": "never",
     "source.organizeImports.biome": "explicit"
   },
   "editor.formatOnSave": true,
