--- a/server/package.json
+++ b/server/package.json
@@ -80,6 +80,7 @@
     "@biomejs/biome": "^1.9.4",
     "@eslint/js": "^9.23.0",
     "eslint": "^9.23.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
     "typescript": "^5.8.2"
