--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,11 @@
     "check": "biome check --max-diagnostics=none",
     "check:fix": "biome check --write --unsafe",
     "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix"
+    "eslint:fix": "eslint . --fix",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:unit": "npm test -- /__tests__/unit/",
+    "test:integration": "npm test -- /__tests__/integration/",
+    "test:feature": "npm test -- /__tests__/feature/ --testPathIgnorePatterns=[]"
   },
   "repository": {
     "type": "git",
@@ -82,7 +86,9 @@
     "eslint": "^9.23.0",
     "eslint-plugin-sonarjs": "^3.0.2",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "supertest": "^7.1.0",
     "typescript": "^5.8.2"
   }
 }
