export from app to index.js before calling app.listen

--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,17 @@
   "name": "polis",
   "version": "0.1.0",
   "description": "polis =====",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "engines": {
     "node": ">=22.0.0"
   },
   "scripts": {
-    "debug": "SERVER_LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 app.js",
-    "dev": "nodemon --inspect=0.0.0.0:9229 app.js",
-    "serve": "node app.js",
+    "debug": "SERVER_LOG_LEVEL=debug nodemon --inspect=0.0.0.0:9229 index.js",
+    "dev": "nodemon --inspect=0.0.0.0:9229 index.js",
+    "serve": "node index.js",
     "start": "npm run serve",
-    "start:watch": "nodemon app.js",
+    "start:watch": "nodemon index.js",
     "fix-imports": "node bin/add-extensions.js",
     "clean": "rm -rf dist",
     "build": "npm run fix-imports && npm run clean && tsc --pretty",
@@ -23,6 +23,7 @@
     "format": "biome format --write",
     "check": "biome check --max-diagnostics=none",
     "check:fix": "biome check --write --unsafe",
+    "db:reset": "node bin/db-reset.js",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
