--- a/delphi/Dockerfile
+++ b/delphi/Dockerfile
@@ -8,15 +8,29 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # Ensure Python output is sent straight to terminal
 ENV PYTHONUNBUFFERED=1
 
+# Install git (needed to clone evoc)
+RUN apt-get update && \
+    apt-get install -y git && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy all the necessary files first
+# Copy requirements file
+COPY requirements.txt .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Clone and install evoc
+RUN git clone https://github.com/TutteInstitute/evoc && \
+    cd evoc && \
+    pip install .
+
+# Copy all the necessary files for the application
 COPY setup.py .
 COPY polismath/ ./polismath/
-
-# Install dependencies and the package
-RUN pip install --no-cache-dir .
 
 # Create data directory
 RUN mkdir -p data
