--- a/delphi/docker-compose.yml
+++ b/delphi/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - JAVA_OPTS=-Xmx1G
     networks:
       - delphi-network
+    user: root
 
   # Delphi Application
   delphi-app:
