--- a/server/package.json
+++ b/server/package.json
@@ -81,6 +81,7 @@
     "simple-xml-to-json": "^1.2.3",
     "source-map-support": "~0.5.21",
     "sql": "~0.34.0",
+    "stripe": "^18.0.0",
     "ts-node": "^10.9.2",
     "underscore": "~1.12.1",
     "valid-url": "~1.0.9",
