--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "d3-scale": "~3.3.0",
+    "dotenv": "^16.5.0",
     "jquery": "~2.2.4",
     "lodash": "~4.17.21",
     "prop-types": "~15.8.1",
